--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <li>Diseño de página web.</li>
 
-<li>Diseño <a href="https://appinventor.mit.edu/">apps</a>.</li>
+<li>Diseño <a href="https://panchitocor.github.io/examen2.github.io/">apps</a>.</li>
 
 <li>Programación de robots.</li>
 
